force-app/main/default/objects/Activity/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Targeted Change Out Call</fullName>
            </value>
            <value>
                <fullName>Project Call</fullName>
            </value>
            <value>
                <fullName>Field Call</fullName>
            </value>
            <value>
                <fullName>Quote Follow-Up</fullName>
            </value>
            <value>
                <fullName>Investigative Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>