force-app/main/default/objects/Activity/fields/Engineering_Drawings_needed__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Drawings_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to denote if a Quote neededs Engineering Drawings</description>
    <label>Engineering Drawings Needed</label>
    <type>Checkbox</type>
</CustomField>