force-app/main/default/objects/Activity/fields/Incoming_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Outgoing__c</fullName>
    <inlineHelpText>Incoming = A call came to you; Outgoing = You made a call</inlineHelpText>
    <label>Incoming / Outgoing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incoming Call</fullName>
            </value>
            <value>
                <fullName>Outgoing Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>